<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <DUT Name="Int_2Byte" Id="{6ca1fd96-a820-4601-a599-23323c454f3a}">
    <Declaration><![CDATA[TYPE Int_2Byte :
UNION
	sValue			:INT; 
	arrByte 		:ARRAY[0..1] OF BYTE;
END_UNION
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>